fix background color

--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ a[href$='.mp3'] {
 #header { 
 width:800px;
 height: 230px;
-background-color: #FAE89E;
+background-color: #940C52;
 background-image:url(images/PrimaveraHeaderButterfly2014_799x230.jpg.png);
 background-repeat:no-repeat;
 padding-left: 0px; padding-top: 0px;
